Fixed input sizes and margin problems on mobile

--- a/css/screen.css
+++ b/css/screen.css
@@ -231,12 +231,12 @@ input, select, textarea, button {
 @media (max-width: 500px) {
 	input {
 		font-size: 15px;
-		width: 300px;
+		width: 200px;
 	}
 
 	#submit-button {
 		font-size: 15px;
-		width: 310px;
+		width: 225px;
 	}
 }
 
@@ -274,6 +274,7 @@ hr#alt-hr {
 @media (max-width: 1260px) {
 	.works-card {
 		width: 100%;
+        margin-left: 0;
 		box-shadow: 0px 0px 0px rgba(19, 69, 117, 1);
 	}
 
